ghost/admin/app/styles/layouts/editor.css
/* ... */
@media (max-width: 800px) {
    .gh-editor-footer {
        display: none;
    }
}

.gh-editor-footer .editor-toolbar {
    border: none;
    background: transparent;
    border-radius: 0;
    opacity: 1;
}

.gh-editor-footer .editor-toolbar:before,
.gh-editor-footer .editor-toolbar:after {
    content: none;
}

.gh-editor-footer .editor-toolbar a:focus {
    outline: none;
}

.gh-editor .CodeMirror {
    overflow: visible;
    padding: 0;
    background: transparent;
    /* Prevent confusing select behaviour, see https://github.com/TryGhost/Ghost/issues/9356 */
    user-select: none;
}

.gh-editor .CodeMirror-cursor {
    border-width: 3px;
    border-color: var(--blue);
}

/* fix visible scrollbars when OSX is set to show them */
.gh-editor .CodeMirror-scroll {
    overflow: visible !important;
}

.gh-editor .CodeMirror-scroll:hover {
    cursor: text;
}

/* prevent markdown content showing after the preview if the preview is shorter */
.gh-editor-preview .CodeMirror-scroll {
    display: none;
}

.gh-editor .gh-editor-title,
.gh-editor .CodeMirror-wrap {
    max-width: 760px;
    margin-right: auto;
    margin-left: auto;
    border: none;
    background: transparent;
}

.gh-editor .CodeMirror-wrap > div > textarea {
    top: 0;
    height: 26px;
    min-height: 26px;
    margin-bottom: -26px;
}

.gh-editor .CodeMirror pre {
    padding: 0;
    color: color(var(--darkgrey) l(+5%));
    font-family: "Consolas", monaco, monospace;
    font-size: 1.6rem;
}

@media (max-width: 960px) {
    .gh-editor .CodeMirror pre {
        font-size: 1.4rem;
    }
}

.gh-editor .CodeMirror .cm-strong {
    color: var(--darkgrey);
}

.gh-editor .CodeMirror .cm-url {
    text-decoration: underline;
}

.gh-editor .editor-preview {
    height: auto;
    margin-top: 4px;
    padding: 0;
    background: transparent;
}

.gh-editor .editor-preview,
.gh-markdown-editor-preview {
    color: color(var(--darkgrey) l(+5%));
    font-family: Georgia, Times, Serif;
    font-size: 1.9rem;
}

.gh-editor .editor-preview h1,
.gh-markdown-editor-preview h1,
.gh-editor .editor-preview h2,
.gh-markdown-editor-preview h2,
.gh-editor .editor-preview h3,
.gh-markdown-editor-preview h3,
.gh-editor .editor-preview h4,
.gh-markdown-editor-preview h4,
.gh-editor .editor-preview h5,
.gh-markdown-editor-preview h5,
.gh-editor .editor-preview h6,
.gh-markdown-editor-preview h6 {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

.gh-markdown-editor-preview-title {
    margin-bottom: 2vw;
}

.gh-editor-drop-target,
.gh-editor-image-upload {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    z-index: 9999;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    border: 2px solid var(--blue);
    background-color: rgba(255,255,255,0.6);
}

.gh-editor-drop-target .drop-target-message {
    padding: 1em;
    background-color: #fff;
    border-radius: 1em;
}

.gh-editor-image-upload.-error {
    border: 2px solid var(--red);
}

.gh-editor-image-upload-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    max-width: 80%;
    padding: 1em;
    background-color: #fff;
    border-radius: 1em;
}

.gh-editor-image-upload .gh-progress-container-progress {
    width: 100%;
}

/* TODO: need a way to make stroke + fill global without causing issues with certain icons */
.gh-editor-image-upload .gh-btn-grey svg path {
    stroke: color(var(--darkgrey) l(+15%));
}

.editor-toolbar a {
    color: var(--darkgrey) !important;
}

.editor-toolbar a.disabled,
.gh-editor-preview .editor-toolbar a:not(.no-disable) {
    color: var(--lightgrey) !important;
    pointer-events: none;
}

.editor-toolbar a.disabled:hover {
    border: none;
}

.editor-toolbar .fa-check {
    position: relative;
    vertical-align: bottom;
}
.editor-toolbar .fa-check:before {
    position: absolute;
    right: 3px;
    bottom: 4px;
    font-size: 14px;
    line-height: 14px;
}

.editor-toolbar .fa-check:after {
    content: "abc";
    position: absolute;
    top: 6px;
    left: 4px;
    font-family: var(--font-family);
    font-size: 9px;
    line-height: 9px;
}

.editor-statusbar .words:before {
    content: "Words: ";
}

.CodeMirror .CodeMirror-code .cm-link {
    color: var(--blue);
    text-decoration: none;
}

.editor-statusbar {
    padding: 8px 15px;
    color: var(--midgrey);
}

.editor-toolbar i.separator {
    border-right: none;
    border-left: color(var(--lightgrey) l(-3%)) 1px solid;
}

.editor-toolbar a.active,
.editor-toolbar a:hover {
    border-color: color(var(--lightgrey) l(-5%));
}

.gh-editor .CodeMirror .CodeMirror-selectedtext {
    color: #000 !important;
}

.CodeMirror .CodeMirror-selected {
    background: color(var(--blue) lightness(+30%));
}

