🐛 Fixed missing cursor and selection issues using editor on iOS
closes https://github.com/TryGhost/Ghost/issues/9378
- only disable element selection on the codemirror content on desktop

--- a/ghost/admin/app/styles/layouts/editor.css
+++ b/ghost/admin/app/styles/layouts/editor.css
@@ -450,7 +450,10 @@
     overflow: visible;
     padding: 0;
     background: transparent;
-    /* Prevent confusing select behaviour, see https://github.com/TryGhost/Ghost/issues/9356 */
+}
+
+/* Prevent confusing select behaviour, see https://github.com/TryGhost/Ghost/issues/9356 */
+.gh-editor .CodeMirror-code:not([contenteditable="true"]) {
     user-select: none;
 }
 
